Fixing the overflow problem

--- a/index.css
+++ b/index.css
@@ -266,17 +266,16 @@ body {
 }
 .card {
   background-color: white;
-  /* box-shadow: 12px 12px 20px rgba(0, 0, 0, 0.1); */
+  box-shadow: 12px 12px 20px rgba(0, 0, 0, 0.1);
   border-radius: 48px;
   padding: 40px;
-  height: 13rem;
-  width: 20%;
   color: #02033b;
+  flex: 1 1 250px;
+  max-width: 300px;
 }
 .card p {
   text-align: center;
-  max-width: 300px; /* Controls line break width */
-  margin: 0 auto; /* Centers the block itself */
+  margin: 0 auto;
   line-height: 1.5;
   padding: 2.3em;
 }
